--- a/server/views/board_create.ejs
+++ b/server/views/board_create.ejs
@@ -1,20 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 <body>
     <h1><a href="/">LOGO</a></h1>
     <h2>게시판 글쓰기</h2>
     <form method="post" action="/board/write">
-        <ul>
-            <li>
-                제목: <input type="text" name="subject">
-            </li>
-            <li>
-                작성자: <input type="text" name="username">
-            </li>
-            <li>
-                작성일: <input type="text" name="date">
-            </li>
-        </ul>
+        <h3> 제목 : </h3>
+        <input type="text" name="subject">
+        <h3> 작성자 : </h3>
+        <input type="text" name="username">
+        <h3> 작성일 : </h3>    
+        <input type="text" name="date">
         <input type="submit" value="작성하기">
     </form>
     <a href="/board/list">취소</a>
-    
+
 </body>
+</html>
