--- a/server/views/board_list.ejs
+++ b/server/views/board_list.ejs
@@ -1,23 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 <body>
     <h1><a href="/">LOGO</a></h1>
     <h2>게시판 리스트</h2>
-    <table>
-        <tr>
-            <td>번호</td>
-            <td>제목</td>
-            <td>작성자</td>
-            <td>작성일</td>
-        </tr>
-        {% for item in content %}
-        <tr>
-            <td>1</td>
-            <td>{{item.subject}}</td>
-            <td>{{item.username}}</td>
-            <td>{{item.date}}</td>
-        </tr>
-        {% endfor %}
+        <% for(var i = 0; i < data.length; i++) { %>
+            <p>
+                <h5><%= data[i].subject %> <%= data[i].username %> <%= data[i].date %></h5>
+            </p>
+        <% } %>
 
 
         <a href="/board/write">글쓰기</a>
-    </table>
 </body>
+</html>
