--- a/server/views/board_list.ejs
+++ b/server/views/board_list.ejs
@@ -10,21 +10,28 @@
     <h1><a href="/">LOGO</a></h1>
     <h2>게시판 리스트</h2>
     <table>
-        <tr>
-            <th>번호</th>
-            <th>제목</th>
-            <th>작성자</th>
-            <th>작성일</th>
-        </tr>
-        <% for(var i = 0; i < data.length; i++) { %>
-        <tr>
-            <td><%= i + 1 %></td>
-            <td><a href="/board/view/<%= i %>"><%= data[i].subject %></a></td>
-            <td><%= data[i].username %></td>
-            <td><%= data[i].date %></td>
-        </tr>
-        <% } %>
-
+        <thead>
+            <tr>
+                <th>번호</th>
+                <th>제목</th>
+                <th>내용</th>
+                <th>작성자</th>
+                <th>작성일</th>
+                <th>수정일</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% for(let i = 0; i < data.length; i++) { %>
+            <tr>
+                <td><%= data[i].id %></td>
+                <td><a href="/board/detail/<%= data[i].id %>"><%= data[i].subject %></a></td>
+                <td><%= data[i].content %></td>
+                <td><%= data[i].userName %></td>
+                <td><%= data[i].createDate %></td>
+                <td><%= data[i].updateDate %></td>
+            </tr>
+            <% } %>
+        </tbody>
         <input type="button" id="write" value="글쓰기"/>
     </table>
     
